<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:context=".EditCourseActivity">

        <TextView
            android:id="@+id/courseTitleView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="@string/course_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <EditText
            android:id="@+id/courseTitleTextEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseTitleView" />

        <TextView
            android:id="@+id/courseStartView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/term_start_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseTitleTextEdit" />

        <Button
            android:id="@+id/datePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseStartView" />

        <TextView
            android:id="@+id/courseEndView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/term_end_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

        <Button
            android:id="@+id/datePickerButton2"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseEndView" />

        <TextView
            android:id="@+id/courseStatusView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/course_status"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton2" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginEnd="105dp"
            android:layout_marginStart="115dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseStatusView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/course_instructor_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/courseInstructorNameView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/course_instructor_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/courseInstructorNameEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:layout_marginRight="140dp"
            android:layout_marginLeft="140dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorNameView" />

        <TextView
            android:id="@+id/courseInstructorPhoneView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="@string/course_instructor_phone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorNameEdit" />

        <EditText
            android:id="@+id/courseInstructorPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:layout_marginRight="140dp"
            android:layout_marginLeft="140dp"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorPhoneView" />

        <TextView
            android:id="@+id/courseInstructorEmailView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/course_instructor_email"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorPhoneEdit" />

        <EditText
            android:id="@+id/courseInstructorEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginRight="140dp"
            android:layout_marginLeft="140dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorEmailView" />

        <TextView
            android:id="@+id/courseOptionalNoteView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/course_instructor_notes"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInstructorEmailEdit" />

        <EditText
            android:id="@+id/courseOptionalNoteTextEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginRight="140dp"
            android:layout_marginLeft="140dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseOptionalNoteView" />

        <Button
            android:id="@+id/editCourseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="140dp"
            android:gravity="center"
            android:text="@string/course_button_text_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseOptionalNoteTextEdit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>