<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:context=".EditTermActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/term_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <EditText
            android:id="@+id/termTitleTextEdit"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="140dp"
            android:gravity="center"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/term_start_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termTitleTextEdit" />

        <Button
            android:id="@+id/datePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="120dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/term_end_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

        <Button
            android:id="@+id/datePickerButton2"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="120dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <Button
            android:id="@+id/editTermButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="140dp"
            android:gravity="center"
            android:text="@string/term_button_text_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>