<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:context=".AddCourseActivity">


        <TextView
            android:id="@+id/assessmentTitleView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="@string/assessment_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" />

        <EditText
            android:id="@+id/assessmentTitleText"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:layout_marginRight="140dp"
            android:layout_marginLeft="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTitleView" />

        <TextView
            android:id="@+id/assessmentStartView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/term_start_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTitleText" />

        <Button
            android:id="@+id/datePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:layout_height="43dp"
            android:layout_marginTop="4dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentStartView" />

        <TextView
            android:id="@+id/assessmentEndView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/term_end_date"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

        <Button
            android:id="@+id/datePickerButton2"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_marginRight="120dp"
            android:layout_marginLeft="120dp"
            android:layout_height="43dp"
            android:layout_marginTop="4dp"
            android:text="@string/term_date_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentEndView" />

        <TextView
            android:id="@+id/assessmentTypeView"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/assessment_type"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton2" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_marginEnd="105dp"
            android:layout_marginStart="115dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTypeView" />

        <Button
            android:id="@+id/addAssessmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="120dp"
            android:gravity="center"
            android:text="@string/assessment_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>